# Qt6-template

./: README.md
Qt-Console-template/: CMakeLists.txt
Qt-Quick-template/: CMakeLists.txt
Qt-Widgets-template/: CMakeLists.txt  mainwindow.ui
